GStreamer: cast subtitle string to const char *

Should prevent us from instantiating `std::char_traits<unsigned char>`

Fixes: QTBUG-122753
Pick-to: 6.6 6.5
Change-Id: Ied3873f794c93da897ad4cc5032a5e02a15ebe68
Reviewed-by: Lars Sutterud <lars.sutterud@qt.io>
Reviewed-by: Mikko Hallamaa <mikko.hallamaa@qt.io>
Reviewed-by: Jøger Hansegård <joger.hansegard@qt.io>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 29fd2a4e263a1f6c46632844f12d3c37c25c3025)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>